start customize for internal use

--- a/lib/generators/slim/scaffold/templates/_form.html.slim
+++ b/lib/generators/slim/scaffold/templates/_form.html.slim
@@ -1,4 +1,4 @@
-= form_for @<%= singular_table_name %> do |f|
+= simple_form_for @<%= singular_table_name %> do |f|
   - if @<%= singular_table_name %>.errors.any?
     #error_explanation
       h2 = "#{pluralize(@<%= singular_table_name %>.errors.count, "error")} prohibited this <%= singular_table_name %> from being saved:"
@@ -7,8 +7,6 @@
           li = message
 
 <% attributes.each do |attribute| -%>
-  .field
-    = f.label :<%= attribute.name %>
-    = f.<%= attribute.field_type %> :<%= attribute.name %>
+    = f.input :<%= attribute.name %>
 <% end -%>
-  .actions = f.submit
+    = f.submit, class: 'is-primary'
