--- a/lib/generators/slim/scaffold/templates/edit.html.slim
+++ b/lib/generators/slim/scaffold/templates/edit.html.slim
@@ -1,8 +1,13 @@
-h1 Editing <%= singular_table_name %>
+- content_for :title, '<%= human_name %>'
+- content_for :hero do
+   .hero.is-small: .hero-body: .container: h1.title Editing <%= singular_table_name %>
 
-== render 'form'
+.section: .container
+  == render 'form'
 
-=> link_to 'Show', @<%= singular_table_name %>
-'|
-=< link_to 'Back', <%= index_helper %>_path
+.section: .container: .buttons.has-addons
+  = link_to @<%= index_helper %>_path, class: 'button' do
+    span.icon: i.fas.fa-arrow-left
+    span Back
+  = link_to 'Show', @<%= singular_table_name %>, class: 'button
 
