--- a/lib/generators/slim/scaffold/templates/index.html.slim
+++ b/lib/generators/slim/scaffold/templates/index.html.slim
@@ -1,6 +1,13 @@
-h1 Listing <%= plural_table_name %>
+- content_for :title, '<%= human_name %>' 
+- content_for :hero do
+  .hero.is-small: .hero-body: .container: .columns
+    .column: h1 Listing <%= plural_table_name %>
+    .column.is-hidden-mobile
+    .column.is-narrow.is-hidden-mobile
+      - if current_user
+        = link_to 'New <%= human_name %>', new_<%= singular_table_name %>_path
 
-table
+.section: .container: .content: table
   thead
     tr
 <% attributes.each do |attribute| -%>
@@ -20,6 +27,5 @@ table
         td = link_to 'Edit', edit_<%= singular_table_name %>_path(<%= singular_table_name %>)
         td = link_to 'Destroy', <%= singular_table_name %>, data: { confirm: 'Are you sure?' }, method: :delete
 
-br
-
-= link_to 'New <%= human_name %>', new_<%= singular_table_name %>_path
+.section: .container
+  = link_to 'New <%= human_name %>', new_<%= singular_table_name %>_path
