--- a/lib/generators/slim/scaffold/templates/_form.html.slim
+++ b/lib/generators/slim/scaffold/templates/_form.html.slim
@@ -7,6 +7,6 @@
           li = message
 
 <% attributes.each do |attribute| -%>
-    = f.input :<%= attribute.name %>
+  = f.input :<%= attribute.name %>
 <% end -%>
-    = f.submit, class: 'is-primary'
+  = f.button :submit, class: 'is-primary'
