--- a/lib/generators/slim/scaffold/templates/_form.html.slim
+++ b/lib/generators/slim/scaffold/templates/_form.html.slim
@@ -9,4 +9,4 @@
 <% attributes.each do |attribute| -%>
   = f.input :<%= attribute.name %>
 <% end -%>
-  = f.button :submit, class: 'is-primary'
+  = f.button :submit
